my-app/src/components/css/AdminSettingsPage.css
.accountInScrollBox{
	list-style-type: none;
	align-items: center;
    text-align: left;
	margin-left: 2vw;
}

.emailInScrollBox{
	list-style-type: none;
	text-align: left;
	font-size: 12px;
	margin-top: -2vh;
	margin-left: 20px;
}

.btn-approve{
	position: absolute;
	margin-top: -4vh;
}

.btn-admin{
	position: absolute;
	margin-top: -4vh;
	margin-left: 7vw;
}

.btn-banUser{
	position: absolute;
	margin-top: -4vh;
	margin-left: 13vw;
}

.btn-delete{
	position: absolute;
	margin-top: -4vh;
	margin-left: 17.5vw;
}

.accountInScrollBoxContainer{
	height: 6vh;
	border: 1px solid black;
}

.settingsPageTitleContainer{
	position: absolute;
    top: 2vh;
    left: 10vw;
    box-sizing: content-box;
    background-color: #FFFFFF;
    z-index: 1;
    width: 360px;
    height: 30px;
}

.adminSettingsPageTitle{
	font-family: Arial Black;
    font-style: normal;
    font-weight: 900;
    font-size: 18px;
}

.settingsPageContainer{
	position: relative;
	height: 90vh;
	width: 95vw;
	border: 2px solid black;
	margin-left: auto;
	margin-right: auto;
	margin-top: auto;
	margin-bottom: auto;
	display: flex;
	flex-direction: column;
}

.homeButtonContainer{
	position: relative;
	width: 5vw;
	margin-right: 3vw;
	margin-left: 87vw;
	justify-content: right;
}

.emailDownloadContainer{
	display: flex;
	flex-direction: column;
	margin-left: 0vw;
	width: 70vw;
	height: 10vh;
}

.emailContainer{
	width: 50vw;
	height: 10vh;
	font-family: Arial Black;
    font-style: normal;
	margin-right: 0vw;
	margin-left: 0vw;
	margin-top: 1vh;
	margin-bottom: 1vh;
}

.emailText{
	margin-left: 0vw;
	font-family: Arial;
	font-style: normal;
	font-size: 16;
	margin-right: 5vw;
	width: 6vw;
}

.downloadText{
	margin-left: 0vw;
	font-family: Arial;
	font-style: normal;
	font-size: 16;
	margin-right: 0vw;
	width: 10vw;
}

.formContainer{
	display: flex;
	flex-direction: column;
	height: 10vh;
	width: 50vw;
	margin-top: 0vh;
}

.downloadLocationBox{
	width: 30vw;
	height: 4vh;
	margin-left: 2vw;
	font-family: Arial;
	font-style: normal;
	font-size: 16;
	margin-top: 0vh;
}

.downloadContainer{
	width: 50vw;
	height: 10vh;
	justify-content: left;
	font-family: Arial Black;
    font-style: normal;
	margin-right: 0vw;
	margin-left: 2vw;
	margin-top: 2vh;
	margin-bottom: 2vh;
	display: flex;
	flex-direction: row;
}

.emailInputBoxS{
	margin-top: 0vh;
	margin-right: 0vw;
	margin-left: auto;
	margin-bottom: auto;
	margin-left: 0vw;
	font-family: Arial;
	font-style: normal;
	font-size: 16;
	width: 30vw;
	height: 4vh;
}

.emailDownloadForm{
	margin-top: -4vh;
	width: 50vw;
	margin-left: 20vw;
}

.topButtonsContainer{
	margin-top: -18vh;
	margin-left: 45vw;
}

.contactRequestButton{
	font-family: Arial Black;
    font-style: normal;
	font-weight: 800;
    font-size: 15px;
    line-height: 20px;
    width: 150px;
    height: 50px;
    align-items: center;
    text-align: center;
    color: #FFFFFF;
    background: #0094FF;
    border: 1px solid #000000;
    box-sizing: border-box;
	margin-top: 1vh;
	margin-left: 1vw;
	margin-right: 1vw
}

.editUsersButton{
	font-family: Arial Black;
    font-style: normal;
	font-weight: 800;
    font-size: 15px;
    width: 150px;
    height: 50px;
    text-align: center;
    color: #FFFFFF;
    background: #0094FF;
    border: 1px solid #000000;
    box-sizing: border-box;
	margin-left: 1vw;
	margin-right: 1vw;
	margin-bottom: 0vh;
	margin-top: 0vh;
	justify-content: center;
	align-items: center;
	padding-bottom: 20px;
}

.homeButtonAdmin{
	height: 100px;
    width: 300px;
    padding-bottom: 20px;
}

.contactRequestButton:hover, .editUsersButton:hover, .deactivateAccountButton:hover{
	transform: scale(1.1);
}

.toggleButtonsContainer{
	width: 20vw;
	margin-top: 2vh;
}

.scrapeHistoryToggle{
	height: 5vh;
	width: 15vw;
	border-radius: 10px;
	border:#000000;
}
.scrapeHistoryToggleContainer{
	width: 15vw;
}

.advancedSearchToggle{
	height: 5vh;
	width: 15vw;
	border-radius: 10px;
	border:#000000;
}
.advancedSearchToggleContainer{
	width: 15vw;
	margin-top: 1vh;
}

.emailNotifToggle{
	height: 5vh;
	width: 15vw;
	border-radius: 10px;
	border:#000000;
}
.emailNotifToggleContainer{
	margin-left: 0px;
	width: 15vw;
	margin-top: 1vh;
}

.adminSettingsPageContent{
	height: 100vh;
	width: 100vw;
	display: flex;
}

.secondRowContainer{
	display: flex;
	flex-direction: row;
	margin-top: 1vh;
	height: 20vh;
}

.scrapeHistoryToggle:hover, .advancedSearchToggle:hover, .emailNotifToggle:hover{
	transform: scale(1.1);
}

.approveAccountsTitleContainer{
	box-sizing: content-box;
	background-color: #FFFFFF;
	z-index: 1;
	width: 25vw;
	height: 5vh;
	/* margin-left: 15vw; */
}

.approveAccountsTitle{
	font-family: Arial Black;
    font-style: normal;
    font-size: 16px;
	position: absolute;
	margin-top: 1vh;
	margin-left: 25vw;
	width: 20vw;
}

.approveScrollingContainer{
	position: relative;
	height: 25vh;
	width: 55vw;
	border: 2px solid black;
	margin-left: auto;
	margin-right: auto;
	margin-top: auto;
	margin-bottom: auto;
	display: flex;
	flex-direction: row;
	justify-content: center;
	align-items: center;
}

.approveScrollBox{
	flex: 1;
	height: 25vh;
	width: 50vw;
	border: 1px solid #ccc;
	font: 16px/26px Georgia, Garamond, Serif;
	overflow-y: scroll;
}

.bottomButtonsContainerA{
	display: flex;
	flex-direction: row;
	justify-content: center;
	margin-top: 3vh;
}

.delAppButtonsContainer{
	display: flex;
	flex-direction: row;
	justify-content: center;
}

.deleteButton{
	font-family: Arial Black;
    font-style: normal;
	font-weight: 800;
    font-size: 15px;
    line-height: 20px;
    width: 150px;
    height: 50px;
    text-align: center;
    color: #FFFFFF;
    background: #0094FF;
    border: 1px solid #000000;
    box-sizing: border-box;
	margin-left: 1vw;
	margin-right: 1vw;
	margin-bottom: 0px;
	margin-top: 1vh;
}

.approveButton{
	font-family: Arial Black;
    font-style: normal;
	font-weight: 800;
    font-size: 15px;
    line-height: 20px;
    width: 150px;
    height: 50px;
    text-align: center;
    color: #FFFFFF;
    background: #0094FF;
    border: 1px solid #000000;
    box-sizing: border-box;
	margin-left: 1vw;
	margin-right: 1vw;
	margin-bottom: 0px;
	margin-top: 1vh;
}

.btn-ban{
	font-family: Arial Black;
    font-style: normal;
	font-weight: 800;
    font-size: 15px;
    line-height: 20px;
    width: 150px;
    height: 50px;
    text-align: center;
    color: #FFFFFF;
    background: #0094FF;
    border: 1px solid #000000;
    box-sizing: border-box;
	margin-left: 1vw;
	margin-right: 1vw;
	margin-bottom: 0px;
	margin-top: 1vh;
}

.logoutButtonContainer{
	margin-left: 0px;
	margin-right: 85vw;
	margin-top: -5vh;
}

.logoutButton{
	font-family: Arial Black;
    font-style: normal;
	font-weight: 800;
    font-size: 15px;
    line-height: 20px;
    width: 150px;
    height: 50px;
    text-align: center;
    color: #FFFFFF;
    background: #0094FF;
    border: 1px solid #000000;
    box-sizing: border-box;
}

.deactivateAccountButton{
	font-family: Arial Black;
    font-style: normal;
	font-weight: 800;
    font-size: 15px;
    line-height: 20px;
    width: 150px;
    height: 50px;
    text-align: center;
    color: #FFFFFF;
    background: #a4a7a7;
    border: 1px solid #000000;
    box-sizing: border-box;
}

.saveChangesButtonContainerA{
	position: absolute;
	height: 50px;
	width: 150px;
	margin-top: -4vh;
	margin-left: 78vw;
}

.btn-saveChanges{
	font-family: Arial Black;
    font-style: normal;
	font-weight: 800;
    font-size: 15px;
    line-height: 20px;
    width: 150px;
    height: 50px;
    align-items: center;
    text-align: center;
    color: #FFFFFF;
	background: #0094FF;
    border: 1px solid #000000;
    box-sizing: border-box;
	margin-bottom: 0px;
	margin-top: 1vh;
	margin-left: 1vw;
}

.deleteButton:hover, .approveButton:hover, .logoutButton:hover, .btn-saveChanges:hover{
	transform: scale(1.1);
}

